--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -10,7 +10,7 @@ wavefront_create_cred_file: false
 wavefront_proxy_pkg_url: 'https://packagecloud.io/wavefront/proxy'
 wavefront_telegraf_pkg_url: 'https://packagecloud.io/wavefront/telegraf'
 wavefront_repo_gpgkey: "https://packagecloud.io/wavefront/proxy/gpgkey"
-wavefront_pkg_state: 'installed'
+wavefront_pkg_state: 'present'
 
 # to set a version of the agent use wavefront-proxy=X.Y.Z
 wavefront_proxy_pkg:  'wavefront-proxy'
