--- a/tasks/telegraf/Debian.yml
+++ b/tasks/telegraf/Debian.yml
@@ -5,8 +5,7 @@
     state: "{{ wavefront_pkg_state }}"
     force: 'yes'
     update_cache: yes
-  register: result
-  until: result|succeeded
+  become: yes
   tags:
    - install
    - debian
